# poetry-demo

./: pyproject.toml
.github/: dependabot.yml
