[tool.poetry]
name = "poetrydemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.13.2"
httpx = "^0.23.3"


[tool.poetry.group.web.dependencies]
fastapi = "0.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
